--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=tallerSpring
+server.port=8080
+spring.datasource.url= jdbc:mysql://localhost:3306/taller1unir
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
